--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta property="og:title" content="Hamza Bouguerra - Personal Portfolio" />
     <meta property="og:description" content="Personal portfolio website of Hamza Bouguerra, an accountant and developer with expertise in finance and programming." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="https://avatars.githubusercontent.com/u/47541283?s=400&u=788a85f9f63abfd03210c2ebfb30b0bb11c95954&v=4" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@hmz931" />
