--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
     
     <!-- Favicon -->
-    <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
+    <link rel="icon" type="image/svg+xml" href="/icons8-portfolio-16.png" />
     
     <!-- Google Fonts with Arabic Support -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
